# IGR_VicenteBurdeus

./: .gitattributes  CMakeLists.txt  Circulos.h  Colision.h  Entorno.cpp  Entorno.h  Gear.cpp  Gear.h  Interaccion.cpp  Jugador.cpp  Jugador.h  Main.cpp  Musica.h  Reloj.cpp  Reloj.h  Trabajo 2.vcxproj  Trabajo 2.vcxproj.filters  cmd  player.py  rubik.h  vcpkg.json
Release/: Cubo.ixx.obj.dt.d.json  Cubo.ixx.obj.dt.module.json  Cubo.ixx.obj.dt.module.json.command  Trabajo 2.exe.recipe  Trabajo 2.iobj  Trabajo 2.ipdb
Release/Trabajo 2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Trabajo 2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
img/: calcular_color.py
